# Turnstile

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  styles.css
.github/workflows/: ci.yml
.husky/: pre-commit
app/: .gitignore  README.md  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
app/e2e/: accessibility.test.ts  app.test.ts  assistant.test.ts  chat.test.ts  editor-features.test.ts  fixtures.ts  goal-panel.test.ts  header-align.test.ts  proof-toggle.test.ts  session-recovery.test.ts  settings-apply.test.ts  spacing.test.ts  visual-audit.test.ts  window.d.ts
app/src/: App.svelte  app.css  main.ts
app/src/assistant/: AssistantPanel.svelte  math.ts  renderContent.ts  renderInlineContent.ts
app/src/components/: AssistantPanel.svelte  ChatPanel.svelte  CodeWindow.svelte  Editor.svelte  GoalPanel.svelte  ProofViewToggle.svelte.test.ts  ProsePanel.svelte  ProsePanel.svelte.test.ts  SelectField.svelte.test.ts  SettingsModal.svelte  SetupOverlay.svelte  SymbolOutline.svelte  SymbolOutline.svelte.test.ts
app/src/formal-proof/: Editor.svelte  SymbolOutline.svelte  SymbolOutline.svelte.test.ts  codeActions.ts  codeWindowExtensions.test.ts  codeWindowExtensions.ts  editor.ts  editorHelpers.test.ts  editorHelpers.ts  fileProgress.test.ts  fileProgress.ts  gotoDefinition.ts  hoverTooltip.test.ts  hoverTooltip.ts  leanAbbrev.test.ts  leanHighlight.test.ts  lspRequests.test.ts  lspRequests.ts  lspState.svelte.ts  positionConvert.ts  symbolOutline.test.ts  symbolOutline.ts  tokenTypes.test.ts  tokenTypes.ts
app/src/goal-state/: GoalBlock.svelte  GoalPanel.svelte  goalLineParse.test.ts  goalLineParse.ts  markdown.test.ts  markdown.ts
app/src/lib/: chatUtils.ts  codeActions.test.ts  codeActions.ts  codeWindowExtensions.test.ts  codeWindowExtensions.ts  delimiterDetect.test.ts  delimiterDetect.ts  editor.ts  editorHelpers.test.ts  editorHelpers.ts  leanAbbrev.ts  (+33 more)
specs/: chat-prompt.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  lib.rs  lsp.rs  main.rs  menu.rs  models.rs  session.rs  session_commands.rs  settings.rs  setup.rs
src-tauri/src/assistant/: mod.rs
src-tauri/src/assistant/prompts/: assistant.md
src-tauri/src/llm/: mod.rs  models.rs
src-tauri/src/lsp/: error.rs  mod.rs
src-tauri/src/prompts/: system.md  translator.md
src-tauri/src/proof/: goal_panel_hover.rs  goal_panel_map.rs  mod.rs  translator.rs
src-tauri/src/proof_assistant/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/tests/: lean_lsp_integration.rs
(+21 files in other folders)
