[package]
name = "turnstile"
version = "0.1.0"
description = "A Tauri App"
authors = []
edition = "2021"

[lib]
name = "turnstile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"

[features]
mock-llm = []

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
